tests/fixtures/invalid/function_pointer_parameter.c
int apply(int (*callback)(int), int value) {
    return callback(value);
}

int main(void) {
    return 0;
}
